--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-#server.port=8080
+server.port=8081
 server.servlet.context-path=/rest
+
 
 # H2
 spring.h2.console.enabled=true
@@ -15,3 +16,4 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+producer-uri  = http://localhost:8080/rest/ws
